--- a/Tarea/Clase 04 - Formulario/formulario.html
+++ b/Tarea/Clase 04 - Formulario/formulario.html
@@ -30,13 +30,13 @@
         <label>
             Nombre
             <input name="nombre">
-            <span>El nombre debe contener solo letras y espacio. </span>
+            <span class="oculto">El nombre debe contener solo letras y espacio. </span>
         </label>
 
         <label>
             Email
             <input name="email">
-            <span>El email debe tener un formato valido.</span>
+            <span class="oculto">El email debe tener un formato valido.</span>
         </label>
 
         <label>
@@ -44,19 +44,20 @@
             <select name="pais">
                 <option value="ninguno">Seleccionar</option>
             </select>
-            <span>Debes seleccionar un país</span>
+            <span class="oculto">Debes seleccionar un país</span>
         </label>
 
         <label>
             <input type="checkbox" name="terminos">
             Aceptar <a href="#">Términos y condiciones</a>
-            <span>Debes aceptar los terminos para registrarse.</span>
+            <span class="oculto">Debes aceptar los terminos para registrarse.</span>
         </label>
 
         <button>Registrarse!</button>
     </form>
 
     <script src="validaciones.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
 
