--- a/miSitioSPA/index.html
+++ b/miSitioSPA/index.html
@@ -9,15 +9,10 @@
 </head>
 <body>
     <h1>SPA</h1>
-    <nav>
-        <a href="./pages/home.html">Home</a>
-        <a href="./pages/productos.html">Productos</a>
-        <a href="./pages/contactos.html">Contactos</a>
-        
-    </nav>
-    <section id="modulo">
-        
-    </section>
+    <nav></nav>
+    <section id="modulo"></section>
+
+    <script src="routes.js"></script>
     <script src="spa.js"></script>
 </body>
 </html>
